Fixed overlapping text.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -30,6 +30,8 @@
   bottom: 5px;
   right: 5px;
   text-align: right;
+  width: 100%;
+  background-color: white;
 }
 
 .supsub {
